tests/machine/x/scala/group_items_iteration.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_items_iteration.scala:17: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[group_items_iteration.Auto1]
 required: scala.collection.mutable.ArrayBuffer[Nothing]
Note: group_items_iteration.Auto1 >: Nothing, but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: Nothing`. (SLS 3.2.10)
      tmp = tmp :+ Auto1(tag = g.key, total = total)
                ^
/workspace/mochi/tests/machine/x/scala/group_items_iteration.scala:19: error: value tag is not a member of Nothing
    val result = (for { r <- tmp } yield r).sortBy(r => r.tag).map(r => r)
                                                          ^
two errors found
